added search, connected backend

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,49 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.market-ticker {
+  width: 100%;
+  overflow: hidden;
+  background-color: #000;
+  color: #fff;
+  padding: 10px 0;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.market-ticker .ticker-animation {
+  width: fit-content;
+  padding-left: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  animation: ticker 8s linear infinite;
+}
+
+@keyframes ticker {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(-100%, 0);
+  }
+}
+
+.search-bar-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
