--- a/assets/css/Home.scss
+++ b/assets/css/Home.scss
@@ -3,19 +3,18 @@ main {
 
     .container {
         display: grid;
-        grid-template-rows: 80px auto 1fr auto 50px;
+        grid-template-rows: auto 1fr 50px;
         grid-template-columns: 2fr 4fr 2fr;
-        height: 100vh;
+        min-height: 100vh;
         grid-template-areas:
-            "header        header        header"
-            "left-aside    banner        right-aside"
             "left-aside    main          right-aside"
-            "left-aside    low-content   right-aside"
             "footer        footer        footer";
         grid-gap: 10px;
         padding: 10px;
         font-weight: 600;
         font-size: 20px;
+        max-width: 1200px;
+        margin: 0 auto;
     }
 
     .header {
@@ -24,11 +23,14 @@ main {
         // padding: 20px;
         text-align: center;
     }
-    .imageright{
+
+    .imageright {
         height: 80px;
         width: 80px;
         border-radius: 8px;
+        object-fit: cover;
     }
+
     .left-aside {
         grid-area: left-aside;
         padding: 20px;
@@ -40,19 +42,17 @@ main {
 
 
             .heading {
-                font-size: 30px;
+                font-family: "Epilogue", sans-serif;
+                font-size: 20px;
                 font-weight: 700;
                 margin-bottom: 20px;
                 text-align: center;
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                font-family: Arial, sans-serif;
-                font-size: 24px;
                 font-weight: bold;
                 color: #1E2532;
                 position: relative;
-                margin: 20px 0;
                 min-width: max-content;
                 width: 100%;
             }
@@ -64,58 +64,25 @@ main {
                 border-bottom: 2px solid #DFDFDF;
                 margin: 0 10px;
             }
-            .newsnewcontainer{
-                display: flex;
-                    flex-direction: row;
-                    align-items: center;
-                    .news{
-                        padding-left: 2%;
-                    }
-            }
-
-            .body {
-                .news-block {
-                    
-                    .date {
-                        font-size: 0.6em;
-                        font-weight: 500;
-                        color: #3B6978;
-                        margin-bottom: 10px;
-                    }
-
-                    >.news {
-                        font-size: 0.9em;
-                        font-weight: 600;
-                        color: #1E2532;
-                        margin-bottom: 10px;
-                        height: 4rem;
-                        display: -webkit-box;
-                        -webkit-box-orient: vertical;
-                        -webkit-line-clamp: 3;
-                        text-overflow: ellipsis;
-                        line-height: 1.2em;
-                        max-height: 3.6em;
-                        margin: 0px;
-                        overflow: hidden;
-                    }
-
-                    .remark {
-                        font-size: 0.6em;
-                        font-weight: 500;
-                    }
-                }
-            }
         }
 
     }
 
-    .main {
+    .home-main {
         grid-area: main;
         // background-color: #4285f4;
         // padding: 20px;
         display: flex;
-        justify-content: center;
+        // justify-content: center;
         align-items: center;
+        background-color: white;
+        margin-top: 20px;
+        border-radius: 10px;
+        height: fit-content;
+
+        .more-main-news {
+            margin: 0 10px 10px 10px;
+        }
     }
 
     .banner {
@@ -144,22 +111,20 @@ main {
         text-align: center;
     }
 
-    @media (max-width: 678px) {
+    @media (max-width: 900px) {
         .container {
             grid-template-rows:
-                50px 50px 50px 1fr 50px 50px 50px;
+                auto auto auto 1fr 50px 50px 50px;
             grid-template-columns: 1fr;
             grid-template-areas:
-                "header"
-                "banner"
-                "left-aside"
                 "main"
+                "left-aside"
                 "right-aside"
-                "low-content"
                 "footer";
         }
     }
 }
+
 /* assets/css/ContentCard.scss */
 .content-card {
     display: flex;
@@ -168,30 +133,51 @@ main {
     overflow: hidden;
     transition: box-shadow 0.3s ease;
     background-color: white;
-  
+
     &__image {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
+        width: calc(100% - 20px);
+        height: 200px;
+        object-fit: cover;
+        margin: 10px;
+        border-radius: 10px;
     }
-  
+
     &__content {
-      padding: 15px;
-  
-      &__title {
+        padding: 15px;
+    }
+
+    &__title {
         font-size: 1.25rem;
         margin: 0 0 10px;
-      }
-  
-      &__description {
+    }
+
+    &__description {
         font-size: 1rem;
         color: #666;
-      }
+        height: 4rem;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 3;
+        text-overflow: ellipsis;
+        line-height: 1.2em;
+        max-height: 3.6em;
+        margin: 0px;
+        overflow: hidden;
     }
-  
 
-  }
-  
+    &__see-more {
+        font-size: 0.75rem;
+        color: #999;
+        margin: 0;
+        text-align: right;
+        cursor: pointer;
+        ;
+    }
+
+
+
+}
+
 //   /* assets/css/ContentCard.scss */
 // .content-card {
 //     display: flex;
@@ -201,7 +187,7 @@ main {
 //     margin-bottom: 15px;
 //     background-color: #fff;
 //     transition: box-shadow 0.3s ease;
-  
+
 //     &__image {
 //       width: 80px;
 //       height: 80px;
@@ -209,33 +195,32 @@ main {
 //       border-radius: 8px;
 //       margin-right: 15px;
 //     }
-  
+
 //     &__content {
 //       display: flex;
 //       flex-direction: column;
 //       justify-content: space-between;
-  
+
 //       &__title {
 //         font-size: 1rem;
 //         font-weight: 600;
 //         margin: 0 0 5px;
 //       }
-  
+
 //       &__description {
 //         font-size: 0.875rem;
 //         color: #666;
 //         margin: 0 0 10px;
 //       }
-  
+
 //       &__date {
 //         font-size: 0.75rem;
 //         color: #999;
 //         margin: 0;
 //       }
-      
+
 
 //     }
-  
-    
+
+
 //   }
-  
