--- a/assets/css/SpecificArticleDesign1.scss
+++ b/assets/css/SpecificArticleDesign1.scss
@@ -54,10 +54,16 @@
     }
 
     .body {
-        img {
-            width: 100%;
-            margin-top: 10px;
-            border-radius: 15px;
+        .image {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        
+            img {
+                // width: 100%;
+                margin-top: 10px;
+                border-radius: 15px;
+            }
         }
 
         .caption {
