issues fxed + logo title fixed

--- a/assets/css/Layout.css
+++ b/assets/css/Layout.css
@@ -28,8 +28,21 @@ header {
   }
 }
 
+.logo {
+  display: flex;
+  align-items: center;
+}
+
 .logo img {
   height: 40px;
+}
+
+.logo .title {
+  margin-left: 5px;
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  color: #214050;
 }
 
 nav ul {
