--- a/src/app/components/SearchableDropdown.css
+++ b/src/app/components/SearchableDropdown.css
@@ -28,11 +28,14 @@
 }
 
 .dropdown .selected-value input {
+  outline: none;
+  box-shadow: 0px 0px 10px #d9d9d9;
+  border: none;
   line-height: 1.5;
   font-size: 1rem;
   background-color: #fff;
   border: 1px solid #ccc;
-  border-radius: 2px;
+  border-radius: 7px;
   box-sizing: border-box;
   cursor: default;
   outline: none;
