--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,8 @@
 
 
 body {
+  background-color: #F3F3F3;
+
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -48,4 +50,5 @@ code {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 10px 0;
 }
