fixed date on article page and breaking news title

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,6 +37,11 @@ code {
   animation: ticker 8s linear infinite;
 }
 
+.ticker-animation a {
+  color: #fff;
+  text-decoration: none;
+}
+
 @keyframes ticker {
   0% {
     transform: translate(0, 0);
