--- a/assets/css/Home.scss
+++ b/assets/css/Home.scss
@@ -81,6 +81,7 @@ main {
 
         .more-main-news {
             margin: 0 10px 10px 10px;
+            width: calc(100% - 20px);
         }
     }
 
@@ -172,54 +173,107 @@ main {
         cursor: pointer;
         ;
     }
-
-
-
 }
 
-//   /* assets/css/ContentCard.scss */
-// .content-card {
-//     display: flex;
-//     align-items: flex-start;
-//     border-radius: 8px;
-//     padding: 15px;
-//     margin-bottom: 15px;
-//     background-color: #fff;
-//     transition: box-shadow 0.3s ease;
-
-//     &__image {
-//       width: 80px;
-//       height: 80px;
-//       object-fit: cover;
-//       border-radius: 8px;
-//       margin-right: 15px;
-//     }
-
-//     &__content {
-//       display: flex;
-//       flex-direction: column;
-//       justify-content: space-between;
-
-//       &__title {
-//         font-size: 1rem;
-//         font-weight: 600;
-//         margin: 0 0 5px;
-//       }
-
-//       &__description {
-//         font-size: 0.875rem;
-//         color: #666;
-//         margin: 0 0 10px;
-//       }
-
-//       &__date {
-//         font-size: 0.75rem;
-//         color: #999;
-//         margin: 0;
-//       }
 
 
-//     }
 
+.skeleton-card {
+    display: flex;
+    flex-direction: column;
+    border-radius: 8px;
+    overflow: hidden;
+    background-color: #f0f0f0;
+    margin: 10px;
+    position: relative;
+    width: calc(100% - 20px);
+    align-items: center;
 
-//   }
+    &__image {
+        width: calc(100% - 20px);
+        height: 200px;
+        background-color: #e0e0e0;
+        border-radius: 8px;
+    }
+
+    &__content {
+        margin: 15px;
+        width: calc(100% - 30px);
+        // height: 30px;
+    }
+
+    &__title {
+        width: 70%;
+        height: 20px;
+        background-color: #e0e0e0;
+        margin-bottom: 10px;
+        position: relative;
+        overflow: hidden;
+
+        .loading-line {
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(to right,
+                    transparent 0%,
+                    rgba(255, 255, 255, 0.5) 50%,
+                    transparent 100%);
+            animation: loading 1.5s infinite;
+        }
+    }
+
+    &__description {
+        width: 100%;
+        height: 60px;
+        background-color: #e0e0e0;
+        position: relative;
+        overflow: hidden;
+        margin-bottom: 10px;
+
+        .loading-line {
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(to right,
+                    transparent 0%,
+                    rgba(255, 255, 255, 0.5) 50%,
+                    transparent 100%);
+            animation: loading 1.5s infinite;
+        }
+    }
+
+    &__see-more {
+        width: 30%;
+        height: 20px;
+        background-color: #e0e0e0;
+        position: relative;
+        overflow: hidden;
+
+        .loading-line {
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(to right,
+                    transparent 0%,
+                    rgba(255, 255, 255, 0.5) 50%,
+                    transparent 100%);
+            animation: loading 1.5s infinite;
+        }
+    }
+}
+
+@keyframes loading {
+    0% {
+        left: -100%;
+    }
+
+    100% {
+        left: 100%;
+    }
+}
