Removed images from the left side bar + moved left side up in mobile

--- a/src/app/components/NewsBlock.scss
+++ b/src/app/components/NewsBlock.scss
@@ -5,6 +5,9 @@
   }
 
   .news-block {
+    :hover {
+      text-decoration: underline !important;
+    }
     .date {
       font-size: 0.6em;
       font-weight: 500;
