--- a/assets/css/Home.scss
+++ b/assets/css/Home.scss
@@ -28,6 +28,7 @@ main {
         width: 80px;
         border-radius: 8px;
         object-fit: cover;
+        margin-right: 10px;
     }
 
     .left-aside {
@@ -118,8 +119,8 @@ main {
             grid-template-columns: 1fr;
             grid-template-areas:
                 "main"
-                "left-aside"
                 "right-aside"
+                "left-aside"
                 "footer";
         }
     }
