--- a/assets/css/Layout.scss
+++ b/assets/css/Layout.scss
@@ -17,34 +17,50 @@ header {
   overflow: hidden;
 }
 
-@media screen and (min-width: 768px) {
-  header {
-    max-width: 80%;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  header {
-    padding: 10px 0;
-  }
-  nav ul div {
-    margin: 0 !important;
-  }
-}
-
-@media screen and (max-width: 1060px) {
-  header {
-    flex-direction: column;
-  }
-  nav{
-    width: 100%;
-  }
-  ul{
+.mobile-nav {
+  display: none;
+  width: 100%;
+  .logo {
     display: flex;
-    justify-content: space-around;
+    align-items: center;
+    justify-content: center;
   }
-  nav ul div {
-    margin: 0;
+
+  nav ul {
+    flex-wrap: wrap;
+  }
+}
+
+.desktop-nav {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  nav {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 1000px;
+
+    :first-child {
+      justify-content: flex-start;
+    }
+
+    :last-child {
+      justify-content: flex-end;
+    }
+
+    ul {
+      flex: 1;
+      gap: 10px;
+      justify-content: center;
+    }
+
+    li a {
+      text-decoration: none;
+      color: #333;
+    }
   }
 }
 
@@ -68,12 +84,47 @@ header {
   text-decoration: none;
   white-space: nowrap;
 }
+
+@media screen and (min-width: 900px) {
+  .desktop-nav nav ul {
+    gap: 20px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  header {
+    padding: 10px 0;
+  }
+  .mobile-nav {
+    display: block;
+  }
+  .desktop-nav {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1060px) {
+  header {
+    flex-direction: column;
+  }
+  nav {
+    width: 100%;
+    ul {
+      display: flex;
+      justify-content: space-around;
+      div {
+        margin: 0;
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 500px) {
   .logo .title {
     white-space: unset;
     font-size: 6vw;
   }
-  .logo{
+  .logo {
     margin: auto;
   }
 }
@@ -83,25 +134,23 @@ header {
   text-decoration: dashed;
 }
 
-nav{
-  max-width: 600px;
-}
+nav {
+  ul {
+    margin-left: auto;
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 
-nav ul {
-  margin-left: auto;
-  display: flex;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
+    div {
+      margin: 5px 15px;
+    }
 
-nav ul div {
-  margin: 0 15px;
-}
-
-nav ul div a {
-  text-decoration: none;
-  color: #333;
+    a {
+      text-decoration: none;
+      color: #333;
+    }
+  }
 }
 
 .login a {
