--- a/src/app/components/NewsBlock.scss
+++ b/src/app/components/NewsBlock.scss
@@ -5,9 +5,6 @@
   }
 
   .news-block {
-    :hover {
-      text-decoration: underline !important;
-    }
     .date {
       font-size: 0.6em;
       font-weight: 500;
@@ -19,6 +16,11 @@
       display: flex;
       flex-direction: row;
       align-items: center;
+
+      img{
+        width: 50%;
+        border-radius: 15px;
+      }
 
       p {
         font-size: 0.7em;
@@ -34,6 +36,10 @@
         max-height: 3.6em;
         margin: 0px;
         overflow: hidden;
+      } 
+
+      :hover {
+        text-decoration: underline !important;
       }
     }
 
