--- a/src/app/terms/conditions/TermsAndConditions.module.css
+++ b/src/app/terms/conditions/TermsAndConditions.module.css
@@ -7,17 +7,20 @@
   .heading {
     font-size: 2.2rem;
     margin-bottom: 1.5rem;
+    color: var(--text-color);
   }
   
   .sectionHeading {
     font-size: 1.5rem;
     margin-top: 1.5rem;
+    color: var(--text-color);
   }
   
   .text, .list {
     font-size: 1rem;
     line-height: 1.6;
     margin-bottom: 1rem;
+    color: var(--text-color1);
   }
   
   .list {
