--- a/src/app/terms/privacy/PrivacyPolicy.module.css
+++ b/src/app/terms/privacy/PrivacyPolicy.module.css
@@ -1,3 +1,5 @@
+
+
 .container {
     max-width: 900px;
     margin: 0 auto;
@@ -7,17 +9,20 @@
   .heading {
     font-size: 2.2rem;
     margin-bottom: 1.5rem;
+    color: var(--text-color);
   }
   
   .sectionHeading {
     font-size: 1.5rem;
     margin-top: 1.5rem;
+    color: var(--text-color);
   }
   
   .text, .list {
     font-size: 1rem;
     line-height: 1.6;
     margin-bottom: 1rem;
+    color: var(--text-color1);
   }
   
   .list {
