--- a/assets/css/SpecificArticleDesign1.scss
+++ b/assets/css/SpecificArticleDesign1.scss
@@ -82,7 +82,7 @@
 
         .leftaside {
             width: 20%;
-            height: auto;
+            height: fit-content;
             border: 1px solid var(--border-color);
             border-radius: 8px;
             padding: 5px 5px 4px 10px;
@@ -104,7 +104,7 @@
         }
 
         .article-dis {
-            width: 53%;
+            width: 49%;
             float: left;
             color: var(--text-color);
 
@@ -126,7 +126,7 @@
 
         .right-aside {
             width: 20%;
-            height: auto;
+            height: fit-content;
             border: 1px solid var(--border-color);
             border-radius: 8px;
             padding: 5px 5px 4px 10px;
@@ -217,7 +217,7 @@
             }
 
             .article-dis {
-                width: 53%;
+                width: 49%;
             }
 
             .right-aside {
