--- a/assets/css/SpecificArticleDesign1.scss
+++ b/assets/css/SpecificArticleDesign1.scss
@@ -116,10 +116,10 @@
             p {
                 font-size: 0.9em;
                 color: var(--text-color);
-                text-align: center;
+                text-align: left;
                 padding: 10px;
-                background-color: var(--card-bg-color);
-                border-radius: 10px;
+                // background-color: var(--card-bg-color);
+                // border-radius: 10px;
                 border: 1px solid var(--border-color);
             }
         }
