--- a/src/app/components/NewsBlock.scss
+++ b/src/app/components/NewsBlock.scss
@@ -7,6 +7,7 @@
   --border-color: #DFDFDF;
   --card-bg-color: #FFFFFF;
   --footer-bg-color: #4285f4;
+  --news-card-text: #000
 }
 
 .dark-mode {
@@ -18,6 +19,7 @@
   --border-color: #333333;
   --card-bg-color: #282828;
   --footer-bg-color: #1f1f1f;
+  --news-card-text: #fff;
 }
 
 .news-block-wrapper {
@@ -27,6 +29,13 @@
   }
 
   .news-block {
+    .type {
+      font-size: 0.8em;
+      font-weight: 500;
+      color: var(--news-card-text);
+      margin-bottom: 10px;
+    }
+
     .date {
       font-size: 0.6em;
       font-weight: 500;
@@ -39,7 +48,7 @@
       flex-direction: row;
       align-items: center;
 
-      img{
+      img {
         width: 50%;
         border-radius: 15px;
       }
@@ -58,7 +67,7 @@
         max-height: 3.6em;
         margin: 0px;
         overflow: hidden;
-      } 
+      }
 
       :hover {
         text-decoration: underline !important;
@@ -117,12 +126,10 @@
           left: -100%;
           width: 100%;
           height: 100%;
-          background: linear-gradient(
-            to right,
-            transparent 0%,
-            rgba(255, 255, 255, 0.5) 50%,
-            transparent 100%
-          );
+          background: linear-gradient(to right,
+              transparent 0%,
+              rgba(255, 255, 255, 0.5) 50%,
+              transparent 100%);
           animation: loading 1.5s infinite;
         }
       }
@@ -141,6 +148,7 @@
   0% {
     left: -100%;
   }
+
   100% {
     left: 100%;
   }
