--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,30 +1,29 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
 
 :root {
   /* Light theme variables */
-  --bg-color: #F3F3F3;
-  --text-color: #041B32;
-  --text-color1: #3B6978;
-  --heading-color: #1E2532;
-  --border-color: #DFDFDF;
-  --card-bg-color: #FFFFFF;
+  --bg-color: #f3f3f3;
+  --text-color: #041b32;
+  --text-color1: #3b6978;
+  --light-text-color-advertisement: #797979;
+  --heading-color: #1e2532;
+  --border-color: #dfdfdf;
+  --card-bg-color: #ffffff;
   --footer-bg-color: #4285f4;
 }
 
 .dark-mode {
   /* Dark theme variables */
   --bg-color: #121212;
-  --text-color: #FFFFFF;
-  --text-color1: #9C9C9C;
+  --text-color: #ffffff;
+  --text-color1: #9c9c9c;
   --heading-color: #f4b400;
   --border-color: #333333;
   --card-bg-color: #282828;
   --footer-bg-color: #1f1f1f;
 }
-
 
 body {
   background-color: var(--bg-color);
@@ -79,4 +78,21 @@ code {
   align-items: center;
   justify-content: center;
   margin: 10px 0;
+  width: 80%;
+}
+
+.advertisement-custom > .title {
+  font-size: 0.8em;
+  text-align: center;
+  color: var(--light-text-color-advertisement);
+  margin-bottom: 10px;
+  text-decoration: none;
+}
+
+.advertisement-custom > .title{
+  text-decoration: none;
+}
+
+.advertisement-custom > img {
+  border-radius: 10px;
 }
